# chiral-bar-cobar

./: .gitignore  AGENTS.md  AUDIT-03-02-2026.md  AUDIT.md  AUDIT2.md  AUDIT3.md  CLAUDE.md  COMMIT_MESSAGE.txt  DEEPAUDIT.md  FRONTIER.md  HARMONIZATION_CG_TODOLIST.md  HARMONIZATION_TASKLIST.md  HOMOTOPY_REFOUNDATION_NOTES.txt  INTEGRATION_GUIDE_Higher_Genus_Expansion.tex  Makefile  PART3_QUASI_ISO_COMPLETE.tex  PART4_HIGHER_GENUS_QI.tex  PATCH_022_CONTENT.tex  PATCH_023_CONTENT.tex  PATCH_024_CONTENT.tex  PATCH_025_CONTENT.tex  PATCH_025_EXAMPLES.tex  PHASE0_CITATION_INTEGRITY_SNAPSHOT.md  PHASE0_DUPLICATE_RESOLUTION.md  PHASE0_PROOF_STATUS.md  PHASE0_THEOREM_DEPENDENCY_INDEX.md  PHASE0_WORKING_LEDGER.md  README.md  STRIKE_LIST_250.md  Section_11_12_2_Heisenberg_Higher_Genus_EXPANDED.tex  Section_11_12_2_PART_B_Feynman_Connection.tex  ambient_modular_complementarity_master_note.tex  appendix_arnold.tex  appendix_computational_tables.tex  appendix_existence_criteria.tex  appendix_general.tex  appendix_koszul.tex  appendix_nilpotent_completion.tex  appendix_sign_conventions.tex  appendix_spectral.tex  (+125 more)
.claude/: settings.json
.codex/: hooks.json
.pytest-full-state/: pytest-full.durations.json  pytest-full.state.json
.pytest-full-state-native-all-20260313b/: pytest-full.durations.json
.pytest-full-state-native-fullcert-20260313/: pytest-full.durations.json  pytest-full.state.json
.pytest-full-state-native-kl-tail-20260313/: pytest-full.durations.json
.pytest-full-state-native-postfix-20260313/: pytest-full.durations.json
adversarial_swarm_20260416/: INDEX.md  (+157 more)
(+5962 files in other folders)
