[project]
name = "chiral-bar-cobar-compute"
version = "0.1.0"
description = "Compute engine for chiral bar-cobar monograph"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["compute/tests"]
markers = [
    "conjectural: conjectural values (not independently verified)",
    "slow: slow tests (>5s)",
]
